Version 1.9.1
- CHG: static linking to CRT and MFC. (Stefan)
- CHG: Allow the SubWCRevCOM object to be reused, i.e.
       clear all gathered data when GetWCInfo2() is
       called. (Stefan)
- CHG: Update TortoisePlink. (Stefan)
- CHG: Moved all commands to the front view in
       TortoiseMerge. (Stefan)
- BUG: When Aero dialogs are disabled, the merge dlg
       background was painted black. (Stefan)
- BUG: SubWCRev segfaulted when started for a
       non-wc path. (Stefan)
- BUG: TMerge showed filtered diffs if "show whitespaces"
       was active. (Stefan)
- BUG: TMerge could mark the wrong line as changed if the
       files contained mixed newlines at the start of
       the files. (Stefan)
- BUG: "Show differences as unified diff" failed if the
       selected files were in different directories. (Stefan)

Version 1.9.0
See the release notes here:
http://tortoisesvn.net/tsvn_1.9_releasenotes.html

Version 1.8.12
- BUG: Issue #691: Bug when SVN-copying (overwriting) files
       inside a working copy. (Stefan)
- BUG: Issue #692: Cleanup reports error when there is
       no cleanup to perform . (Stefan)

Version 1.8.11
- BUG: Issue #682: Statistics graph for "Commits by author"
       error when "Authors case sensitive" is toggled. (Stefan)
- BUG: Issue #685: Memory leak showing status. (Stefan)
- BUG: Autocorrect case-renames if already done manually. (Stefan)
- BUG: Focus lost in File diff dialog. (Stefan)
- BUG: Cached HEAD revision when doing updates. (Stefan)
- BUG: empty path shown in tree conflict resolver dialog. (Stefan)
- BUG: working copy revision not shown in revision graph. (Stefan)
- BUG: Focus problems when diffing. (Stefan)

Version 1.8.10
- BUG: Fails to run on Windows XP. (Stefan)

Version 1.8.9
- BUG: Issue #661: memory leak committing multiple
       working copies. (Stefan)
- BUG: Issue #662: drawing bug in progress dialog. (Stefan)
- BUG: issue #665: inherited properties give
       unexpected results. (Stefan)